--- a/.github/workflows/sonar-scan.yaml
+++ b/.github/workflows/sonar-scan.yaml
@@ -21,7 +21,7 @@ jobs:
       with:
         projectBaseDir: .
         args: >
-          -Dsonar.organization=my-org
+          -Dsonar.organization=my-Java-web-app
           -Dsonar.projectKey=my-Java-web-app
       env:
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
